tests/ui/from/struct_multiple_fields.stderr
error: deriving From requires no fields other than source and backtrace
  --> tests/ui/from/struct_multiple_fields.rs:10:5
   |
10 |     #[from]
   |     ^^^^^^^
